--- a/ExternaSorting/ExternalSorting/ExternalSorting.csproj
+++ b/ExternaSorting/ExternalSorting/ExternalSorting.csproj
@@ -48,6 +48,7 @@
     <Compile Include="CommandParser.cs" />
     <Compile Include="Commands\ExitCommand.cs" />
     <Compile Include="Commands\HelpCommand.cs" />
+    <Compile Include="Commands\ICommandData.cs" />
     <Compile Include="Commands\IncorrectCommand.cs" />
     <Compile Include="Commands\SortCommand.cs" />
     <Compile Include="Input\ConsoleInput.cs" />
