--- a/ExternaSorting/ExternalSorting.Tests/ExternalSorting.Tests.csproj
+++ b/ExternaSorting/ExternalSorting.Tests/ExternalSorting.Tests.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Input\InputTests.cs" />
     <Compile Include="Parser\ParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shell\ShellTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ExternalSorting\ExternalSorting.csproj">
