--- a/ExternaSorting/ExternalSorting/ExternalSorting.csproj
+++ b/ExternaSorting/ExternalSorting/ExternalSorting.csproj
@@ -44,7 +44,9 @@
   <ItemGroup>
     <Compile Include="Commands\CancelCommand.cs" />
     <Compile Include="Commands\ICommand.cs" />
-    <Compile Include="CommandExecutor.cs" />
+    <Compile Include="Printer\ConsolePrinter.cs" />
+    <Compile Include="Printer\IPrinter.cs" />
+    <Compile Include="Shell.cs" />
     <Compile Include="CommandParser.cs" />
     <Compile Include="Commands\ExitCommand.cs" />
     <Compile Include="Commands\HelpCommand.cs" />
@@ -59,9 +61,11 @@
     <Compile Include="Input\InputReader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShellFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
