implemented cancelation operation

--- a/ExternaSorting/ExternalSorting.Tests/ExternalSorting.Tests.csproj
+++ b/ExternaSorting/ExternalSorting.Tests/ExternalSorting.Tests.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Input\InputTests.cs" />
+    <Compile Include="Options\OptionTests.cs" />
     <Compile Include="Parser\ParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shell\ShellTests.cs" />
