--- a/ExternaSorting/ExternalSorting/ExternalSorting.csproj
+++ b/ExternaSorting/ExternalSorting/ExternalSorting.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\CancelCommand.cs" />
+    <Compile Include="Commands\Command.cs" />
     <Compile Include="Commands\ICommand.cs" />
     <Compile Include="Printer\ConsolePrinter.cs" />
     <Compile Include="Printer\IPrinter.cs" />
@@ -62,6 +63,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShellFactory.cs" />
+    <Compile Include="SortTask\ISortTaskData.cs" />
+    <Compile Include="Optional\Option.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
