--- a/ExternaSorting/ExternalSorting/ExternalSorting.csproj
+++ b/ExternaSorting/ExternalSorting/ExternalSorting.csproj
@@ -63,8 +63,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShellFactory.cs" />
-    <Compile Include="SortTask\ISortTaskData.cs" />
     <Compile Include="Optional\Option.cs" />
+    <Compile Include="SortTask\IMemoryChecker.cs" />
+    <Compile Include="SortTask\ISortStrategy.cs" />
+    <Compile Include="SortTask\ISortStrategyFactory.cs" />
+    <Compile Include="SortTask\SortStrategyFactory.cs" />
+    <Compile Include="SortTask\SortTaskFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
